# alias_game

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README.txt  docker-compose.yaml  pyproject.toml  uwsgi.ini
.github/: test_and_deploy.yml
.github/workflows/: test_and_deploy.yml
.requirements/: common.txt  linters.txt
alias/: conftest.py  manage.py  pytest.ini
alias/conf/: settings.py  urls.py  views.py
alias/frontend/: urls.py  views.py
alias/game_room/: apps.py  urls.py
alias/game_room/migrations/: 0001_initial.py
alias/game_room/models/: __init__.py  comments.py  room.py
alias/game_room/serializers/: comment.py  game.py  room.py
alias/game_room/services/: game_logic.py  room_logic.py
alias/game_room/tests/: tests_comments.py
alias/game_room/views/: comment.py  game.py  room.py
alias/my_auth/: authentication.py  models.py  request.py  serializers.py  urls.py  views.py
alias/my_auth/migrations/: 0001_initial.py
alias/my_auth/services/: user_crud.py
alias/my_auth/tests/: test_logic.py  test_views.py
alias/player/: models.py  serializer.py  urls.py  views.py
alias/player/migrations/: 0001_initial.py
alias/player/services/: player_logic.py  words_logic.py
alias/player/tests/: tests_next_player.py  tests_views.py
alias/word/: models.py  serializers.py  urls.py  views.py
alias/word/services/: words_logic.py
config/: django.conf
config/scripts/: run_web.sh
dockerfiles/: docker_django.conf  docker_nginx.conf
preload_data/: easy_word.json  hard_words.json
scripts/: run_web.sh
(+35 files in other folders)
