[tool.poetry]
name = "alias_game"
version = "0.1.0"
description = ""
authors = ["E1-Bart0 <starovoitov.vadik1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
python-dotenv = "^0.19.0"
uWSGI = "^2.0.19"
Django = "^3.2.7"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
requests = "^2.26.0"
mixer = "^7.1.2"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
flake8 = "^3.9.2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.1"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.6.1"
flake8-eradicate = "^1.1.0"
flake8-mutable = "^1.2.0"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.5.0"
flake8-return = "^1.1.3"
pep8-naming = "^0.12.1"
pytest-cov = "^2.12.1"
isort = "^5.9.3"
black = "^21.9b0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '.venv'

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore=true
